<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Securoute</string>
    <string name="latitude">Lat.</string>
    <string name="longitude">Lon.</string>
    <string name="precision">Précision</string>
    <string name="zero">0</string>
    <string name="distance_securite">Distance de sécurité</string>
    <string name="kg">Kg</string>
    <string name="m">m</string>
    <string name="N">N</string>
    <string name="distance_arret">Distance d\'arrêt</string>
    <string name="distance_freinage">Distance de freinage</string>
    <string name="speed">Vitesse</string>
    <string name="acceleration">Acceleration</string>
    <string name="mps">m/s</string>
    <string name="mps2">m/s-2</string>
    <string name="kmh">km/h</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="collision">Collision</string>
    <string name="deceleration">Décélération</string>
    <string name="G">G</string>

    <string name="action_help">Aide</string>
    <string name="action_settings">Réglages</string>


    <!-- Strings related to Settings -->
    <string name="pref_reaction_time">Temps de reaction (secondes)</string>
    <string name="pref_vehicle_weight">Poids du véhicule (kg)</string>
    <string name="pref_driver_weight">Poids du conducteur (kg)</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>